<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SignInActivity">

        <RelativeLayout
            android:layout_weight="15"
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <ImageView
                android:id="@+id/ivSignIn"
                android:scaleType="centerCrop"
                android:src="@drawable/chaselogin"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <FrameLayout
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                android:id="@+id/fragSignInHolder"
                android:layout_width="340dp"
                android:layout_height="wrap_content">

            </FrameLayout>

        </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="bottom"
        android:orientation="vertical">

        <TextView
            style="@style/FinePrint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/equal_housing_lender" />

        <TextView
            style="@style/FinePrint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/deposit_products" />

        <TextView
            style="@style/FinePrint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/credit_cards_issued" />

        <TextView
            style="@style/FinePrint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/copyright_chase" />

    </LinearLayout>

</LinearLayout>